# neuromem

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISH.md  QUICKSTART_PUBLISH.md  README.md  RELEASE_CHECKLIST.md  config.py  consolidator.py  coreference.py  docker-compose.v2.yml  docker-compose.yml  health_checks.py  http_server.py  main.py  mcp_server.py  privacy_filter.py  private_brain.py  pyproject.toml  session_manager.py  test-results.txt  test_data.sh  zeabur-deploy.yaml
.agents/code-reviews/: access-layer-and-session-v3-review.md  docker-compose-healthchecks-review.md  session-memory-v3-review.md
.agents/execution-reports/: access-layer-sdk-and-cli.md  code-review-fix-session-memory-v3.md
.agents/plans/: access-layer-sdk-and-cli.md
.agents/system-reviews/: access-layer-sdk-and-cli-review.md  code-review-fix-session-memory-v3-review.md  session-memory-management-review.md
depoly/: Dockerfile.app
docker/postgres-age-vector/: Dockerfile
docs/: ADR.md  API.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  COMPONENTS.md  CONFIGURATION.md  DATA_MODEL.md  DEPLOYMENT.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPER_API.md  ECHO_REQUIREMENTS.md  ENGINEERING_WORKFLOW.md  GETTING_STARTED.md  HIGH_LEVEL_API_DESIGN.md  HIGH_LEVEL_API_EXAMPLES.md  HIGH_LEVEL_API_ROADMAP.md  HOW_IT_WORKS.md  MEM0_DEEP_DIVE.md  OBSERVABILITY.md  REMAINING_FEATURES_AND_ORDER.md  REST_API.md  SDK_GUIDE.md  SESSION_MEMORY_DESIGN.md  TESTING.md  TODO_HIGH_LEVEL_API.md  USER_API.md  WHY_NO_WEB_UI.md  memory-architecture.md
docs/design/: TODO-memory-v2.md  context-aware-recall.md  memory-classification-v2.md  memory-flow-diagram.md
docs/feature-plans/: README.md  session-memory-management.md
docs/v1/: README.md
docs/v2/: ARCHITECTURE.md  GETTING_STARTED.md  README.md  SDK_GUIDE.md
evaluation/: cli.py  config.py
evaluation/history/: 2025-02-19_profile_graph.json  OPTIMIZATION_HISTORY.md  index.json
evaluation/pipelines/: base.py  locomo.py
evaluation/prompts/: answer.py
evaluation/results_window/: locomo_query_checkpoint.json  locomo_results.json
evaluation/results_window500/: locomo_query_checkpoint.json  locomo_results.json
example/: README.md  chat_agent.py
java/: .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  pom.xml
migrations/: 002_add_conversation_embeddings.sql
neuromem/: __init__.py  _core.py  db.py
neuromem/models/: __init__.py  memory.py
neuromem/providers/: callback_llm.py
neuromem/services/: __init__.py  context.py  encryption.py  memory.py  memory_extraction.py  reflection.py  search.py  trait_engine.py
neuromemory/: __init__.py  _core.py  cli.py  db.py
neuromemory/models/: __init__.py  base.py  conversation.py  document.py  (+3 more)
rpiv/: brainstorm-summary-context-aware-recall.md  brainstorm-summary-emotion-architecture-migration.md  research-context-aware-recall.md
scripts/: backfill_context.py  eval_context_params.py  publish.sh  reextract_eval.py  run_migration.py
tests/: __init__.py  conftest.py  test_api.py  test_api_v1.py  test_bm25_sanitize.py  test_cli.py  test_cognitive.py  test_context.py  test_context_backfill.py  test_context_extraction.py  test_context_inference.py  test_conversation_recall.py  test_conversations.py  test_encryption.py  test_files.py  test_graph.py  test_graph_boost.py  test_graph_memory.py  test_kv.py  test_memory_crud.py  test_memory_extraction.py  test_memory_time.py  test_parameter_tuning.py  test_profile_unification.py  test_profile_view_enhanced.py  test_pronoun_elimination.py  test_recall.py  test_recall_context_e2e.py  test_recall_context_match.py  test_recall_emotion.py  test_recall_memory_context_boost.py  test_reflect_watermark.py  test_reflection.py  test_reflection_v2.py  test_sdk.py  test_search.py  test_session.py  test_storage_v2_backfill.py  test_temporal.py  test_temporal_memory.py  (+3 more)
(+98 files in other folders)
