[project]
name = "neuromemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai==4.2.0",
    "langchain-neo4j==0.7.0",
    "langchain-openai==1.1.7",
    "mem0ai[graph]>=1.0.2",
    "python-dotenv==1.2.1",
    # HTTP Server 依赖
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
]

[project.scripts]
neuromemory = "neuromemory.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.1.0",
]

[tool.setuptools]
packages = ["neuromemory", "tests"]
py-modules = [
    "config",
    "private_brain",
    "session_manager",
    "coreference",
    "consolidator",
    "privacy_filter",
    "health_checks",
]

[tool.pytest.ini_options]
# 默认显示 print 输出，便于观察测试过程
addopts = "-v -s"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_db: marks tests that require database services (Qdrant/Neo4j)",
]
