[project]
name = "neuromemory"
version = "2.0.0"
description = "Memory management framework for AI agents"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34.0"]
pdf = ["pypdf>=4.0.0"]
docx = ["python-docx>=1.1.0"]
all = [
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neuromemory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: tests that require external API (embedding/LLM)",
    "requires_db: tests that require PostgreSQL",
]
